--- a/Internship Report/main.tex
+++ b/Internship Report/main.tex
@@ -1,5 +1,3 @@
-% Citations should be in bibtex format and go in references.bib
-
 \documentclass[a4paper, 11pt]{report}
 \usepackage[top=3cm, bottom=3cm, left = 2cm, right = 2cm]{geometry} 
 \geometry{a4paper} 
@@ -18,14 +16,17 @@
 \author{Nabil ECH-CHOKHMANY}
 %\date{}
 
-
 \begin{document}
+
 \maketitle
+
 \tableofcontents
 
 \include{Introduction}
 \include{Background}
 \include{Overview}
+\include{Implementation}
+
 
 \bibliographystyle{abbrv}
 %\bibliography{references}  % need to put bibtex references in references.bib 
