--- a/Internship Report/Implementation.tex
+++ b/Internship Report/Implementation.tex
@@ -115,6 +115,22 @@ Consequently, when the end device (VPC) requests an IP address from the DHCP ser
     \includegraphics[width=0.7\linewidth]{Images/VPC_dhcp.png}
     \caption{IP assignment.}
 \end{figure}
+
+\section{Enabling NETCONG-YANG}
+
+Enabling NETCONF-YANG functionality in a Cisco router is a simple process accomplished through a series of command lines entered directly into the router's console.
+
+\begin{verbatim}
+    enable 
+    configure terminal
+    netconf-yang
+\end{verbatim}
+
+In the case of Cisco CSR 1000v, we will need to enable candidate-datastore feature which will be discussed later:
+
+\begin{verbatim}
+    netconf-yang feature candidate-datastore
+\end{verbatim}
 \section{SSH connection establishment}
 \subsection{Secure SHell (SSH)}
 SSH, also known as Secure Shell or Secure Socket Shell, is a network protocol that gives users, particularly system administrators, a secure way to access a computer over an unsecured network.
@@ -126,3 +142,53 @@ In addition to providing strong encryption, SSH is widely used by network admini
 In our scenario, we will establish an SSH connection between the local PC, acting as an administrator, and the three routers depicted in Figure 4.5.
 
 \subsection{Establishing an SSH connection between the router an host}
+\subsubsection{On Cisco router}
+\subsubsection{Step 1:}
+First, we will need to configure the hostname (Ex: Server1) and domain name 
+\begin{verbatim}
+    hostname Server1
+    ip domain-name Server1-domain
+    %I need to change this 
+\end{verbatim}
+\subsubsection{Step 2:}
+Generate rsa modulus and enter modulus lenght (2048 recommended), also configure the device to run SSHv2
+\begin{verbatim}
+    crypto key generate rsa modulus 2048 
+    ip ssh version 
+\end{verbatim}
+\subsubsection{Step 3:}
+Configure the virtual terminal line settings
+\begin{verbatim}
+    line vty 0 4 // configure the virtual terminal line settings
+    login local
+    transport input all
+\end{verbatim}
+\subsubsection{Step 4:}
+Create user and password for SSH client to access, and set privilege privilege level 15 to the username ‘admin’
+\begin{verbatim}
+    username admin password nabil 
+    username admin privilege 15 
+\end{verbatim}
+\indent Finaly, we don't forget to save the change by copying the ruuning configuration to the startup configuration
+\subsubsection{On the local machine}
+\indent First, we need to create a new virtual interface (eth1) with an automatically assigned IP address. In our case, we are using an Ubuntu machine:
+\begin{verbatim}
+    sudo ip link add name eth1 type dummy
+    sudo ip link set eth1 up
+    sudo dhclient eth1
+\end{verbatim}
+Following the setup, we can proceed to establish an SSH connection from the local machine, acting as the management server, to the router. The router's IP address is "192.168.1.1", and the default port for NETCONF is "830".
+\begin{verbatim}
+    ssh admin@192.168.1.1 -p 830 -s netconf 
+    password: nabil
+\end{verbatim}
+\subsection{Result}
+
+
+
+
+
+
+
+
+
